--- a/src/shared/modules/user-dropdown/user-dropdown.component.html
+++ b/src/shared/modules/user-dropdown/user-dropdown.component.html
@@ -9,7 +9,7 @@
       <a
         mat-list-item
         class="nav-link"
-        [routerLink]="['/user-settings']"
+        [routerLink]="['/settings']"
       >
         <div class="nav-link-text">{{ 'UserDropdownComponent.account-settings' | translate }}</div>
       </a>
