ST-53 Added "keep session open" option

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -21,6 +21,14 @@
         <app-form-errors fieldName="password" [control]="loginForm.get('password')"></app-form-errors>
       </mat-form-field>
 
+      <mat-checkbox
+        formControlName="keepSessionOpen"
+        style="display: inline-flex;"
+        [color]="color"
+      >
+        <mat-label style=" font-size: medium;">{{ 'LoginComponent.keep-session-open' | translate }}</mat-label>
+      </mat-checkbox>
+
       <div fxLayout="row" fxLayoutAlign="flex-end" class="actions">
         <button
           [disabled]="loading" 
