--- a/src/app/modules/nav-bar/nav-bar.component.html
+++ b/src/app/modules/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
       </span>
 
       <a
-        *ngIf='canAccessUserModule'
+        *ngIf="canAccessUserModule"
         mat-list-item
         class="nav-link"
         [routerLink]="['users']"
@@ -19,14 +19,14 @@
       </a>
 
       <a
-        *ngIf='canAccessProviderModule'
+        *ngIf="canAccessAssetLevelModule"
         mat-list-item
         class="nav-link"
-        [routerLink]="['providers']"
+        [routerLink]="['asset-levels']"
         routerLinkActive="sidebar__nav-link&#45;&#45;active"
       >
         <mat-icon>group</mat-icon>
-        <div class="nav-link-text">{{ 'ProviderListComponent.title' | translate }}</div>
+        <div class="nav-link-text">{{ 'AssetLevelListComponent.title' | translate }}</div>
       </a>
 
       <section class="nav-list-section-footer">
